<resources>
    <string name="app_name">atividade1803</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="instituto">INSTITUTO FEDERAL DO TOCANTINS</string>
    <string name="araguaina">Campus Araguaína</string>
    <string name="araguatins">Campus Araguatins</string>
    <string name="colinas">Campus Colinas do Tocantins</string>
    <string name="dianopolis">Campus Dianópolis</string>
    <string name="formoso">Campus Formoso do Araguaia</string>
    <string name="gurupi">Campus Gurupi</string>
    <string name="lagoa">Campus Lagoa da Cofusão</string>
    <string name="palmas">Campus Palmas</string>
    <string name="paraiso">Campus Paraíso do Tocantins</string>
    <string name="pedroAfonso">Campus Pedro Afonso</string>
    <string name="porto">Campus Porto Nacional</string>
    <string name="reitoria">Reitoria</string>
    <string name="cursos_ofertados">Cursos Ofertados</string>
    <string name="proeja">INTEGRADO EJA/PROEJA</string>
    <string name="operador_de_computador">OPERADOR DE COMPUTADOR</string>
    <string name="fic_qualificacao">FIC/Qualificação</string>
    <string name="tecnico_em_biotecnologia">TÉCNICO EM BIOTECNOLOGIA</string>
    <string name="tecnico_em_informatica">TÉCNICO EM INFORMÁTICA</string>
    <string name="subsequente">SUBSEQUENTE</string>
    <string name="tecnico_em_analises_clinicas">TÉCNICO EM ANÁLISES CLÍNICAS</string>
    <string name="tecnico_em_enfermagem">TÉCNICO EM ENFERMAGEM</string>
    <string name="tecnicos">Técnicos</string>
    <string name="graduacao">Graduação - Grade e Corpo Docente</string>
    <string name="integrado_regular">INTEGRADO REGULAR</string>
    <string name="tecnologico">TECNOLÓGICO</string>
    <string name="analise_e_desenvolvimento_de_sistemas">ANÁLISE E DESENVOLVIMENTO DE SISTEMAS</string>
    <string name="gestao_da_producao_industrial">GESTÃO DA PRODUÇÃO INDUSTRIAL</string>
    <string name="pos_graduacao">Pós-graduação</string>
    <string name="especializacao_lato_sensu">ESPECIALIZAÇÃO (LATO SENSU)</string>
    <string name="formacao_docente_ambiental">FORMAÇÃO DOCENTE EM EDUCAÇÃO AMBIENTAL E DESENVOLVIMENTO SUSTENTÁVEL</string>
    <string name="tecnico_em_agropecuaria">TÉCNICO EM AGROPECUÁRIA</string>
    <string name="tecnico_em_redes_de_computadores">TÉCNICO EM REDES DE COMPUTADORES</string>
    <string name="bacharelado">BACHARELADO</string>
    <string name="engenharia_agronomica">ENGENHARIA AGRONÔMICA</string>
    <string name="licenciatura">LICENCIATURA</string>
    <string name="ciencias_biologicas">CIÊNCIAS BIOLÓGICAS</string>
    <string name="computacao">COMPUTAÇÃO</string>
    <string name="desenvolvimento_de_sistemas_computacionais">DESENVOLVIMENTO DE SISTEMAS COMPUTACIONAIS</string>
    <string name="ensino_de_ciencias_da_natureza_e_matematica">ENSINO DE CIÊNCIAS DA NATUREZA E MATEMÁTICA</string>
    <string name="cursos_tecnicos_a_distancia">CURSOS TÉCNICOS A DISTÂNCIA</string>
    <string name="tecnico_em_manutencao_e_suporte_em_informatica">TÉCNICO EM MANUTENÇÃO E SUPORTE EM INFORMÁTICA</string>
    <string name="cursos_tecnicos_presenciais">CURSOS TÉCNICOS PRESENCIAIS</string>
    <string name="agropecuaria_sustentavel">AGROPECUÁRIA SUSTENTÁVEL</string>
    <string name="producao_agropecuaria">GESTÃO E TECNOLOGIA DA PRODUÇÃO AGROPECUÁRIA</string>
    <string name="extensao">EXTENSÃO</string>
    <string name="auxiliar_em_orientacao_educacional">AUXILIAR EM ORIENTAÇÃO EDUCACIONAL</string>
    <string name="contador_de_historias">CONTADOR DE HISTÓRIAS</string>
    <string name="normalizacao_de_trabalhos_academicos">NORMALIZAÇÃO DE TRABALHOS ACADÊMICOS</string>
    <string name="principios_e_aplicacoes_da_agroecologia">PRINCÍPIOS E APLICAÇÕES DA AGROECOLOGIA</string>
    <string name="informatica_e_novas_tecnologias">INFORMÁTICA E NOVAS TECNOLOGIAS</string>
    <string name="introducao_ao_linux">INTRODUÇÃO AO LINUX</string>
    <string name="logica_computacional_e_programacao">LÓGICA COMPUTACIONAL E PROGRAMAÇÃO</string>
    <string name="tecnico_em_agricultura">TÉCNICO EM AGRICULTURA</string>
    <string name="concomitante">CONCOMITANTE</string>
    <string name="ensino_de_ciencias_e_matematica">ENSINO DE CIÊNCIAS E MATEMÁTICA</string>
    <string name="tecnico_em_edificacoes">TÉCNICO EM EDIFICAÇÕES</string>
    <string name="tecnico_em_administracao">TÉCNICO EM ADMINISTRAÇÃO</string>
    <string name="tecnico_em_agronegocio">TÉCNICO EM AGRONEGÓCIO</string>
    <string name="engenharia_civil">ENGENHARIA CIVIL</string>
    <string name="teatro">TEATRO</string>
    <string name="gestao_publica">GESTÃO PÚBLICA</string>
    <string name="producao_de_graos">PRODUÇÃO DE GRÃOS</string>
    <string name="arte_educacao">ARTE EDUCAÇÃO</string>
    <string name="agropecuaria_tropical">AGROPECUÁRIA TROPICAL</string>
    <string name="lib_lottie">Lib Lottie</string>
    <string name="recepcionista">RECEPCIONISTA</string>
    <string name="atendimento">ATENDIMENTO</string>
    <string name="manutencao_e_operacao_de_microcomputadores">MANUTENÇÃO E OPERAÇÃO DE MICROCOMPUTADORES</string>
    <string name="tecnico_em_agrimensura">TÉCNICO EM AGRIMENSURA</string>
    <string name="tecnico_em_controle_ambiental">TÉCNICO EM CONTROLE AMBIENTAL</string>
    <string name="tecnico_em_eletrotocnica">TÉCNICO EM ELETROTÉCNICA</string>
    <string name="tecnico_em_eventos">TÉCNICO EM EVENTOS</string>
    <string name="tecnico_em_informatica_para_internet">TÉCNICO EM INFORMÁTICA PARA INTERNET</string>
    <string name="tecnico_em_mecatronica">TÉCNICO EM MECATRÔNICA</string>
    <string name="tecnico_em_automacao_industrial">TÉCNICO EM AUTOMAÇÃO INDUSTRIAL</string>
    <string name="tecnico_em_secretariado">TÉCNICO EM SECRETARIADO</string>
    <string name="tecnico_em_seguranca_do_trabalho">TÉCNICO EM SEGURANÇA DO TRABALHO</string>
    <string name="engenharia_eletrica">ENGENHARIA ELÉTRICA</string>
    <string name="educacao_fisica">EDUCAÇÃO FÍSICA</string>
    <string name="fisica">FÍSICA</string>
    <string name="letras">LETRAS - LÍNGUA PORTUGUESA</string>
    <string name="matematica">MATEMÁTICA</string>
    <string name="pedagogia">PEDAGOGIA E EPT (UAB/IFTO)</string>
    <string name="agronegocio">AGRONEGÓCIO</string>
    <string name="construcao_de_edificios">CONSTRUÇÃO DE EDIFÍCIOS</string>
    <string name="gestao_de_turismo">GESTÃO DE TURISMO</string>
    <string name="gestao_do_agronegocio">GESTÃO DO AGRONEGÓCIO</string>
    <string name="sistemas_eletricos">SISTEMAS ELÉTRICOS</string>
    <string name="sistemas_para_internet">SISTEMAS PARA INTERNET</string>
    <string name="tecnologia_ambiental">TECNOLOGIA AMBIENTAL</string>
    <string name="telematica">TELEMÁTICA</string>
    <string name="mestrado">MESTRADO</string>
    <string name="mestrado_educacao_profissional">MESTRADO PROFISSIONAL EM EDUCAÇÃO PROFISSIONAL E TECNOLÓGICA - PROFEPT</string>
    <string name="tecnico_em_agroindustria">TÉCNICO EM AGROINDÚSTRIA</string>
    <string name="administracao">ADMINISTRAÇÃO</string>
    <string name="quimica">QUÍMICA</string>
    <string name="alimentos">ALIMENTOS</string>
    <string name="gestao_da_tecnologia_da_informacao">GESTÃO DA TECNOLOGIA DA INFORMAÇÃO</string>
    <string name="assistente_administrativo">ASSISTENTE ADMINISTRATIVO</string>
    <string name="tecnico_em_meio_ambiente">TÉCNICO EM MEIO AMBIENTE</string>
    <string name="tecnico_em_vendas">TÉCNICO EM VENDAS</string>
    <string name="sistemas_de_informacao">SISTEMAS DE INFORMAÇÃO</string>
    <string name="licenciatura_em_computacao">LICENCIATURA EM COMPUTAÇÃO</string>
    <string name="licenciatura_em_pedagogia">LICENCIATURA EM PEDAGOGIA</string>
    <string name="tecnologia_em_logistica">TECNOLOGIA EM LOGÍSTICA</string>
    <string name="endereco">Endereço: Avenida Joaquim Teotônio Segurado, Quadra 202 sul, ACSU-SE 20, Conjunto 1, Lote 8 Plano Diretor Sul 77020-450 Palmas - Tocantins</string>
    <string name="telefone">Telefone: (63) 3229-2200</string>
    <string name="email">E-mail: reitoria@ifto.edu.br</string>
</resources>