<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    tools:context=".ui.palmas.PalmasFagment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:src="@drawable/palmas"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/text_cursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursos_ofertados"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/text_fic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fic"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/fic_qualificacao"/>

        <TextView
            android:id="@+id/text_proeja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/proeja"/>

        <TextView
            android:id="@+id/text_atendimento"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atendimento"/>

        <TextView
            android:id="@+id/text_manutencao_e_operacao_de_microcomputadores"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manutencao_e_operacao_de_microcomputadores"/>

        <TextView
            android:id="@+id/text_tecnicos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/tecnicos"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/tecnicos"/>

        <TextView
            android:id="@+id/text_integrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/integrado_regular"/>

        <TextView
            android:id="@+id/text_tecnico_em_administracao"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_administracao"/>
        <TextView
            android:id="@+id/text_tecnico_em_agrimensura"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_agrimensura"/>
        <TextView
            android:id="@+id/text_tecnico_em_agronegocio"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_agronegocio"/>
        <TextView
            android:id="@+id/text_tecnico_em_controle_ambiental"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_controle_ambiental"/>
        <TextView
            android:id="@+id/text_tecnico_em_eletrotocnica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_eletrotocnica"/>
        <TextView
            android:id="@+id/text_tecnico_em_eventos"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_eventos"/>
        <TextView
            android:id="@+id/text_tecnico_em_informatica_para_internet"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_informatica_para_internet"/>
        <TextView
            android:id="@+id/text_tecnico_em_mecatronica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_mecatronica"/>

        <TextView
            android:id="@+id/text_subsequente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/subsequente"/>

        <TextView
            android:id="@+id/text_tecnico_em_agrimensura_subsequente"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_agrimensura"/>
        <TextView
            android:id="@+id/text_tecnico_em_automacao_industrial"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_automacao_industrial"/>
        <TextView
            android:id="@+id/tecnico_em_edificacoes"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_edificacoes"/>
        <TextView
            android:id="@+id/text_tecnico_em_eletrotocnica_susequente"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_eletrotocnica"/>
        <TextView
            android:id="@+id/text_tecnico_em_informatica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_informatica"/>
        <TextView
            android:id="@+id/text_tecnico_em_secretariado"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_secretariado"/>
        <TextView
            android:id="@+id/text_tecnico_em_seguranca_do_trabalho"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_seguranca_do_trabalho"/>

        <TextView
            android:id="@+id/text_graduacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/graducao"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/graduacao"/>

        <TextView
            android:id="@+id/text_bacharelado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/bacharelado"/>

        <TextView
            android:id="@+id/text_engenharia_agronomica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engenharia_agronomica"/>
        <TextView
            android:id="@+id/text_engenharia_civil"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engenharia_civil"/>
        <TextView
            android:id="@+id/text_engenharia_eletrica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engenharia_eletrica"/>

        <TextView
            android:id="@+id/text_licenciatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/licenciatura"/>

        <TextView
            android:id="@+id/text_educacao_fisica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educacao_fisica"/>
        <TextView
            android:id="@+id/text_fisica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fisica"/>
        <TextView
            android:id="@+id/text_letras"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/letras"/>
        <TextView
            android:id="@+id/text_matematica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matematica"/>
        <TextView
            android:id="@+id/text_pedagogia"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedagogia"/>

        <TextView
            android:id="@+id/text_tecnologico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/tecnologico"/>

        <TextView
            android:id="@+id/text_agronegocio"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agronegocio"/>
        <TextView
            android:id="@+id/text_construcao_de_edificios"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/construcao_de_edificios"/>
        <TextView
            android:id="@+id/text_gestao_de_turismo"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gestao_de_turismo"/>
        <TextView
            android:id="@+id/text_gestao_do_agronegocio"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gestao_do_agronegocio"/>
        <TextView
            android:id="@+id/text_gestao_publica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gestao_publica"/>
        <TextView
            android:id="@+id/text_sistemas_eletricos"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sistemas_eletricos"/>

        <TextView
            android:id="@+id/text_sistemas_para_internet"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sistemas_para_internet"/>

        <TextView
            android:id="@+id/text_pos_graduacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/pos_graduacao"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/pos_graduacao"/>

        <TextView
            android:id="@+id/text_especializacao_lato_sensu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/especializacao_lato_sensu"/>

        <TextView
            android:id="@+id/text_tecnologia_ambiental"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnologia_ambiental"/>
        <TextView
            android:id="@+id/text_telematica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telematica"/>

        <TextView
            android:id="@+id/text_mestrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/mestrado"/>

        <TextView
            android:id="@+id/text_mestrado_educacao_profissional"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mestrado_educacao_profissional"/>
    </LinearLayout>
</ScrollView>