<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    tools:context=".ui.porto.PortoFagment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:src="@drawable/porto"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/text_cursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursos_ofertados"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/text_fic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fic"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/fic_qualificacao"/>

        <TextView
            android:id="@+id/text_proeja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/proeja"/>

        <TextView
            android:id="@+id/text_assistente_administrativo"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assistente_administrativo"/>

        <TextView
            android:id="@+id/text_tecnicos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/tecnicos"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/tecnicos"/>

        <TextView
            android:id="@+id/text_integrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/integrado_regular"/>

        <TextView
            android:id="@+id/text_tecnico_em_administracao"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_administracao"/>

        <TextView
            android:id="@+id/text_tecnico_em_informatica_para_internet"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_informatica_para_internet"/>
        <TextView
            android:id="@+id/text_tecnico_em_meio_ambiente"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_meio_ambiente"/>

        <TextView
            android:id="@+id/text_subsequente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/subsequente"/>

        <TextView
            android:id="@+id/text_tecnico_em_informatica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_informatica"/>
        <TextView
            android:id="@+id/text_tecnico_em_vendas"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnico_em_vendas"/>

        <TextView
            android:id="@+id/text_graduacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/graducao"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/graduacao"/>

        <TextView
            android:id="@+id/text_bacharelado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/bacharelado"/>

        <TextView
            android:id="@+id/text_administracao"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/administracao"/>
        <TextView
            android:id="@+id/text_sistemas_de_informacao"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sistemas_de_informacao"/>

        <TextView
            android:id="@+id/text_licenciatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/licenciatura"/>

        <TextView
            android:id="@+id/text_licenciatura_em_computacao"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licenciatura_em_computacao"/>
        <TextView
            android:id="@+id/text_licenciatura_em_pedagogia"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licenciatura_em_pedagogia"/>

        <TextView
            android:id="@+id/text_tecnologico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/tecnologico"/>

        <TextView
            android:id="@+id/text_tecnologia_em_logistica"
            android:textAlignment="viewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tecnologia_em_logistica"/>


    </LinearLayout>
</ScrollView>